--- a/Movable Words/Base.lproj/Main.storyboard
+++ b/Movable Words/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lVG-de-adz"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Zni-FI-dQQ" firstAttribute="centerY" secondItem="lVG-de-adz" secondAttribute="centerY" id="3X1-rO-sBR"/>
                             <constraint firstItem="lVG-de-adz" firstAttribute="trailing" secondItem="Nng-ld-oaV" secondAttribute="trailing" constant="16" id="3lu-qQ-UaD"/>
@@ -176,8 +176,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
